This file documents the revision history for Perl extension Gitalist.

0.003009 2012-03-18
  - Don't use MooseX::Types::ISO8601 to serialize DateTime objects as its
    coercion function is now stricter than the object provided.
  - Make tests pass with more recent versions of Catalyst.

0.003008 2012-01-29
  - Now with Changes.

0.003007 2012-01-28
  - Allow the model to be user defined,
  - Use new Catalyst features.
  - Make repo_dir work consistently with GITALIST_REPO_DIR (Tomas Doran).
  - Add the Vhost collection of repositories (Tomas Doran).

0.003006 2011-10-18
  - Fix lies in docs, make config more obvious (Tomas Doran)
  - Avoid "Use of qw(...) as parentheses is deprecated" warning with
    perl-5.14 (Gisle Aas)

0.003005 2011-07-13
  - Provide option to disable gravatars.
  - Tweaks to make Gitalist fit for debian (Jonas Genannt).
  - Fixes to enable Gitalist to run on Win32 (Christian Walde).
  - Fix content-type of core.css handler (Christian Walde).

0.003004 2011-06-07
  - Fix dependency typo in Makefile.PL.

0.003003 2011-06-06
  - Fixed ownership assertions in t/02git_object.t (Christian Walde).
  - Change default local config to not search recursively.
  - Don't attempt to syntax highlight anything big.
  - Fix for infinite loop bug in blame.

0.003002 2011-05-23
  - Add JSON serialization and expose via .json (Tomas Doran).
  - Provide .psgi for Plack goodness (Francoise Dehinbo).

0.003001 2011-03-13
  - Reinstate FromDirectory in model.
  - Drop unneeded deps in Makefile.PL.
  - Add support for multiple repos with the same name (Jose Luis Martinez).
  - Make paging work for history (Lian Wan Situ),
  - Respect paging.log config settings.

0.002009 2011-03-06
  - Document the available configuration options.
  - Provide switch in config for forcing recursive repo searching.
  - Assume UTF8 encoded blobs.

0.002008 2011-02-26
  - Add the ability to provide a whitelist of repos.
  - Add support for export-ok config option.