@@ -1,5 +1,7 @@
 This file documents the revision history for Perl extension Gitalist.
 
+  - Depend on new Catalyst::Runtime and drop use of Catalyst::Controller::ActionRole
+
 0.003009 2012-03-18
   - Don't use MooseX::Types::ISO8601 to serialize DateTime objects as its
     coercion function is now stricter than the object provided.
